--- a/electrical/templates/electrical/index.html
+++ b/electrical/templates/electrical/index.html
@@ -1,22 +1,41 @@
+{% extends 'electrical/navbar.html' %}
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello</title>
-        {% load static %}
+        <title>Electrician Calculator</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{% static 'styles.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  </head>
     </head>
     <body>
-        <h1>Hello, Electricians!</h1>
-        <H3>Built for Electricians, by Electricians.</H3>
-        <h3>Dave</h3>
-        <form action="calc">
-            {% csrf_token %}
-            Current(Amps)<br />
-            <input type="text" name="t1"/> <br /><br />
-            Resistance(Ohms)<br/>
-            <input type="text" name="t2"/> <br /><br />
-            <input type="submit" value="click me"/> <br/>
-            {{calc_value}}
-        </form>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+       
+        {% block navbar %}
+        <div>
+        <h1>Built by Electricians, for Electricians<h1/>
+        <h5>Single Phase Calculations:</h5>
+        </div>
+        <div>
+        <ul>
+            <li><a href="volts">Power Calculator(Voltage=Amps*Resistance)</a></li>
+            <li><a href="amps">Current Calculator(Amps=Voltage/Resistance)</a></li>
+            <li><a href="res">Resistance Calculator(Resistance=Voltage/Amps)</a></li>
+            <li><a href="meff">Motor Efficiency Calculator(Efficiency=Output/Input)</a></li>
+            <li><a href="watt">True Power Calculator(Wattage=Voltage*Current)</a></li>
+            <li><a href="pfr">Power Factor Calculator(PowerFactor=Wattage/VA)</a></li>
+            <li><a href="hp">Horsepower to Wattage Calculator(Wattage=HorsePower*746)</a></li>
+        </ul>
+        <ul>
+
+    </ul>
+</div>
+<iframe src="//ws-na.amazon-adsystem.com/widgets/cm?o=15&p=14&l=ur1&category=biss&banner=1ANYFE2JPFMZQBYNPXR2&f=ifr&linkID=6e33ddfed8f9c95405d15b833a96ae39&t=dave0a0e-20&tracking_id=dave0a0e-20" width="160" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
     </body>
+    {% endblock %}
 </html>
