--- a/tools/templates/tools/index.html
+++ b/tools/templates/tools/index.html
@@ -231,7 +231,7 @@
         <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Solar Digital</p></div>
     </footer>
     <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' %}"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
 </body>{% endblock %}
