--- a/electrical/templates/electrical/index.html
+++ b/electrical/templates/electrical/index.html
@@ -13,13 +13,12 @@
     </head>
     <body>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
        
         {% block navbar %}
         <div>
-        <h1>Built by Electricians, for Electricians<h1/>
-        <h5>Single Phase Calculations:</h5>
+        <div>
+        <div>
+        <h5 class='main-text'>Single Phase Calculations:</h5>
         </div>
         <div>
         <ul>
@@ -35,7 +34,21 @@
 
     </ul>
 </div>
-<iframe src="//ws-na.amazon-adsystem.com/widgets/cm?o=15&p=14&l=ur1&category=biss&banner=1ANYFE2JPFMZQBYNPXR2&f=ifr&linkID=6e33ddfed8f9c95405d15b833a96ae39&t=dave0a0e-20&tracking_id=dave0a0e-20" width="160" height="600" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
+</div>
+<div>
+        <div>
+        <h5 class='main-text'>Three Phase Calculations:</h5>
+        </div>
+        <div>
+        <ul>
+            <li><a href="pfr">Power Factor Calculator(PowerFactor=Wattage/VA)</a></li>
+        </ul>
+        <ul>
+
+    </ul>
+</div>
+</div>
+</div>
     </body>
     {% endblock %}
 </html>
