--- a/tools/templates/tools/index.html
+++ b/tools/templates/tools/index.html
@@ -1,6 +1,11 @@
 {% extends 'electrical/navbar.html' %}
 {% load static %}
-
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Electrician Tools</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+  </head>
 {% block navbar %}
 <body>
     <!-- Header-->
