--- a/electrical/templates/electrical/navbar.html
+++ b/electrical/templates/electrical/navbar.html
@@ -16,7 +16,7 @@
         
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="">DaveG</a>
+            <a class="navbar-brand" href="/">DaveG</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,10 +32,7 @@
                   <a class="nav-link" href="/tools">Tools</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Jobs</a>
+                  <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Blog</a>
