--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5">
             <div class="col-lg-6">
-                <h2 class="mt-5 home-text">Your Electrician's Resource by Dave!</h2>
+                <h2 class="mt-5 home-text">Your Electrician's Top Resource by Dave!</h2>
                 <p class="home-text">Wether you're a master electrician, journeyman, apprentice or just thinking about becoming an electrician, electriciancalculator.net hopes to provide ample resources in your venture.</p>
             </div>
         </div>
