--- a/tools/templates/tools/index.html
+++ b/tools/templates/tools/index.html
@@ -231,10 +231,8 @@
         </div>
         
     </section>
-    <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Solar Digital</p></div>
-    </footer>
+    {% include 'electrical/footer.html' %}
+    
     <!-- Bootstrap core JS-->
     <script src="{% static 'https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' %}"></script>
     <!-- Core theme JS-->
